# simple_rust_web_server_with_axum

./: Cargo.toml  README.md
examples/: webserver_test.rs
src/: context.rs  error.rs  lib.rs  log.rs  main.rs  model.rs
src/web/: login_router.rs  middleware_auth.rs  mod.rs  ticket_router.rs
