[package]
name = "learn_rust_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# skip serialize none
serde_with = "3.0.0"

axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"

lazy-regex = "2"
async-trait = "0.1"
# convert enum to string
strum_macros = "0.25"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1.4"
